--- a/vscode-wpilib/resources/webviews/help.html
+++ b/vscode-wpilib/resources/webviews/help.html
@@ -6,21 +6,7 @@
 </head>
 
 <body>
-
-  <h1>WPILib Help</h1>
-
-  <img src="replaceresource/resources/wpilib.svg" width="100" />
-
-  <p>Welcome to WPILib Help!</p>
-
-  <p>To open this window again, open the Command Palette (F1 or View->Command Palette), and select
-    <b>Open WPILib Help.</b>
-  </p>
-
-  <p>For more help, see
-    <a href="https://docs.wpilib.org/en/latest">the WPILib documentation.</a>
-  </p>
-
+<iframe src="https://docs.wpilib.org/" width="100%" height="100%"/>
 </body>
 
 </html>
